# create-py-app

./: .gitignore  Cargo.toml  README.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml  release.yml
docs/: Compile.md
scripts/ci/: installer.iss
src/: lib.rs  main.rs  presets.rs  py_detector.rs
src/cli/: args.rs  mod.rs  subparsers.rs
src/commands/: mod.rs
src/os_detection/: mod.rs  pyenv_detection.rs
src/template_handler/: create_dirs.rs  create_std_template.rs  mod.rs
src/template_handler/templater/: docker.rs  docs.rs  git.rs  mod.rs  python.rs  retype.rs  scripts.rs
src/template_handler/templates/: docs.rs  git.rs  python.rs
templates/: .gitignore  .python-version  README.md
templates/.github/workflows/: release.yml
templates/docker/: Dockerfile.dev
templates/docker/dev/: Dockerfile.dev
templates/docker/prod/: docker-compose-prod.yml
templates/docs/: Development.md
templates/docs/Usage/: README.md
templates/scripts/cd/: README.md
templates/scripts/ci/: README.md
templates/scripts/dev/: setup.ps1
templates/src/: pyproject.toml  setup.py
templates/src/project/: const.py  enums.py  filesystem.py  logger.py  main.py  metadata.py
templates/src/project/config/: configuration.py  logger.py
templates/src/project/exceptions/: base_exceptions.py
templates/src/tests/: conftest.py
templates/src/tests/unit/: test_logger.py
