[package]
name = "create-py-app"
version = "0.1.5"
edition = "2021"

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.10", features = ["derive"] }
regex = "1.10.2"

[profile.dev]
opt-level = 1

[profile.release]
# optimized for generic architecture (this will work on older CPUs too)
codegen-units = 1  # better optimization
lto = true  # enable link time optimization
opt-level = "z"  # binary size > performance
