[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
# ^^^ this basically says 'use setup.py to build the package' ^^^


#[project]
#name = "{{ name }}"
#version = "1.0.0"
#description = ""
#authors = [{name = "", email = ""}]
#requires-python = ">={{ python-version }}"
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "Operating System :: OS Independent",
#]
#dependencies = []
